--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "rbxtsc",
     "watch": "rbxtsc -w --verbose",
     "dev": "rbxtsc -w --verbose",
-    "serve": "rojo serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "rojo serve"
   },
   "keywords": [],
   "author": "",
